Add socket fr stress testing backend